--- a/config/cluster-role-binding.yaml
+++ b/config/cluster-role-binding.yaml
@@ -4,11 +4,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: #@ "{}-binding".format(clusterrolebinding.clusterrole)
+  name: #@ "{}-binding".format(clusterrolebinding.role.name)
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: #@ clusterrolebinding.clusterrole
+  name: #@ clusterrolebinding.role.name
 subjects:
 #@ for serviceaccount in clusterrolebinding.serviceaccounts:
 #@ for target_ns in serviceaccount.namespaces:
