--- a/config/role-binding.yaml
+++ b/config/role-binding.yaml
@@ -5,12 +5,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: #@ "{}-binding".format(rolebinding.role)
+  name: #@ "{}-binding".format(rolebinding.role.name)
   namespace: #@ namespace.name
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: #@ rolebinding.role
+  kind: #@ rolebinding.role.kind
+  name: #@ rolebinding.role.name
 subjects:
 #@ for serviceaccount in rolebinding.serviceaccounts:
 #@ for target_ns in (serviceaccount.namespaces if hasattr(serviceaccount, "namespaces") else [ namespace ]):
