--- a/config/role/ns-admin.yaml
+++ b/config/role/ns-admin.yaml
@@ -11,7 +11,8 @@
 
 #@ role = "ns-admin"
 #@ rolebinding = target_rolebinding(role, data.values.rbac.rolebindings)
-#@ for/end namespace in rolebinding.namespaces:
+#@ if/end rolebinding:
+#@   for/end namespace in rolebinding.namespaces:
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
