--- a/config/role/ns-admin.yaml
+++ b/config/role/ns-admin.yaml
@@ -11,8 +11,8 @@
 
 #@ role = "ns-admin"
 #@ rolebinding = target_rolebinding(role, data.values.rbac.rolebindings)
-#@ if/end rolebinding:
-#@   for/end namespace in rolebinding.namespaces:
+#@ if rolebinding:
+#@   for namespace in rolebinding.namespaces:
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -23,3 +23,5 @@ rules:
 - apiGroups: [ "*" ]
   resources: [ "*" ]
   verbs: [ "*" ]
+#@   end
+#@ end
